add_subdirectory(Test1)
##cuda driver api test(simple add)
add_subdirectory(Test2)
##cuda driver api test(image filter)
add_subdirectory(Test3)
##opengl compute shader test(image filter)
add_subdirectory(Test4)
## optix test (init Pipeline)
add_subdirectory(Test5)
## optix test2(first Traverse(Single GAS))
add_subdirectory(Test6)
## optix test3(first Instance(2 Instance 1 GAS))
add_subdirectory(Test7)
add_subdirectory(Test8)
add_subdirectory(Test9)