add_subdirectory(Test1)
##cuda driver api test(simple add)
add_subdirectory(Test2)
##cuda driver api test(image filter)
add_subdirectory(Test3)
##opengl compute shader test(image filter)
add_subdirectory(Test4)
## optix test (init Pipeline)
add_subdirectory(Test5)
## optix test2(first Traverse(Single GAS))
add_subdirectory(Test6)
## optix test3(first Instance(2 Instance 1 GAS))
add_subdirectory(Test7)
add_subdirectory(Test8)
## optix test5(first model(sponza))
add_subdirectory(Test9)
## optix test5(first model with Tex(sponza))
add_subdirectory(Test10)
## optix test6(first model(cornel box))
add_subdirectory(Test11)
## optix test7(first path tracing)
add_subdirectory(Test12)
add_subdirectory(Test13)
## optix test9(first free Camera)
add_subdirectory(Test14)
add_subdirectory(Test15)
## add imgui 
add_subdirectory(Test16)
## fix light
add_subdirectory(Test17)
## fix shader
add_subdirectory(Test18)
## practical path guiding
add_subdirectory(Test19)

add_subdirectory(Test20)

add_subdirectory(TestPathGuiding)