file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/cuda)
# file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h   DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/cuda)
# file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu  DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/cuda)
set(TEST_TEST11_CUDA_PATH "${CMAKE_CURRENT_BINARY_DIR}/cuda")
set(TEST_TEST11_DATA_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../Data")
configure_file(
    ${CMAKE_CURRENT_SOURCE_DIR}/Test11Config.h.in 
    ${CMAKE_CURRENT_BINARY_DIR}/Test11Config.h 
)
add_executable(Test11 main.cpp ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h  ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu)
add_custom_command(TARGET Test11 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h  ${CMAKE_CURRENT_BINARY_DIR}/cuda/RayTrace.h )
add_custom_command(TARGET Test11 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu ${CMAKE_CURRENT_BINARY_DIR}/cuda/RayTrace.cu)
target_include_directories(Test11 PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
target_link_libraries(Test11 PUBLIC RTLib)